# excorzism

./: .gitignore  LICENSE  README.md
advent-of-code/: README.md
advent-of-code/2015/: README.md  flake.nix  pyproject.toml
advent-of-code/2015/day01/: __init__.py
advent-of-code/2015/day01/a/: __init__.py  main.py
advent-of-code/2015/day01/b/: __init__.py  main.py
advent-of-code/2015/day02/a/: main.py
advent-of-code/2015/day02/b/: main.py
advent-of-code/2015/day03/a/: __init__.py
advent-of-code/2015/day03/b/: __init__.py
advent-of-code/2015/tests/: test_day01.py  test_day02.py  test_day03.py
advent-of-code/2016/: README.md
advent-of-code/2017/: README.md
advent-of-code/2018/: README.md
advent-of-code/2019/: README.md
advent-of-code/2020/: README.md
advent-of-code/2021/: README.md
advent-of-code/2022/: README.md
advent-of-code/2023/: README.md
advent-of-code/2024/: README.md
advent-of-code/2025/: README.md
solutions/julia/annalyns-infiltration/1/: annalyns-infiltration.jl
solutions/julia/currency-exchange/1/: currency-exchange.jl
solutions/julia/lasagna/1/: lasagna.jl
solutions/python/armstrong-numbers/1/: armstrong_numbers.py
solutions/python/collatz-conjecture/1/: collatz_conjecture.py
solutions/python/currency-exchange/1/: exchange.py
solutions/python/currency-exchange/2/: exchange.py
solutions/python/ghost-gobble-arcade-game/1/: arcade_game.py
solutions/python/grains/1/: grains.py
solutions/python/guidos-gorgeous-lasagna/1/: lasagna.py
solutions/python/guidos-gorgeous-lasagna/2/: lasagna.py
(+4 files in other folders)
