[project]
name = "advent-of-code-2015"
version = "0.0"
description = "Repository containing the answers to advent of code 2015"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=9.0.1",
    "pytest-aoc>=1.23.4",
]


[tool.pytest.ini_options]
aoc_year = 2015
pythonpath = ["."]
